<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/numeroTxt" />

    <Spinner
        android:id="@+id/spinnerConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/consultaBoton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/BotonConsulta" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactoTxt" />

    <EditText
        android:id="@+id/editTextContactoConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"      
        android:inputType="textPersonName"
        android:editable="false" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefonoTxt" />

    <EditText
        android:id="@+id/editTextTlfConsulta"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:editable="false" />

    <Button
        android:id="@+id/BotonLlamaTlf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:enabled="false"
        android:text="@string/BotonLlamarTlf" />

</LinearLayout>